2003-09-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (SUBDIRS): Use plain srcdir stepmake instead of
	$(builddir).  Stepmake is a normal subdirectory now, that is not
	configured.  Another srcdir build fix.

2003-09-20  Heikki Junes  <hjunes@cc.hut.fi>

	* ly/chord-modifiers-init.ly, lilypond.vim: updates for vim.

	* GNUmakefile.in, buildscripts/lilypond.words: give only path in
	GNUmakefile.in.

2003-09-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/help2man-rules.make: Allow manpages to fail
	when cross building.

	* stepmake/stepmake/help2man-rules.make: 

	* configure.in: srcdir build fix.

	* cygwin/GNUmakefile:
	* cygwin/lily-wins.py:
	* cygwin/postremove-lilypond.sh: 
	* cygwin/postinstall-lilypond.sh: Merge from stable.

	* cygwin/bug-lilypond-cygwin.sh: s/lilypond/lilypond-bin,
	s/ly2dvi/lilypond/.

2003-09-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (after_line_breaking): only set control points if
	none supplied yet.

	* input/test/slur-manual.ly: new file.

	* scripts/convert-ly.py (FatalConversionError.sub_chords): convert
	<<  >> chords too.

	* VERSION (PACKAGE_NAME): release 1.9.8

	* scripts/lilypond.py (escape_path): escape spaces in directory names

	* input/test/text-spanner.ly: fixes.

2003-09-19  Heikki Junes  <hjunes@cc.hut.fi>

	* buildscripts/lilypond.words.py: add drum names as note names to
	Emacs-mode.

2003-09-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/hairpin-dashed.ly: new file.

	* scripts/convert-ly.py (conv): warn about dash-length.

	* lily/dynamic-engraver.cc (try_music): end (de)crescendo
	automatically if we get a new one.

	* lily/lookup.cc (dashed_line): new function

	* lily/line-spanner.cc (dashed_line_molecule): cleanups. Use
	dash-fraction.

2003-09-18  Heikki Junes  <hjunes@cc.hut.fi>

	* buildscripts/lilypond.words.py: extract note names.

	* lilypond-mode.el: take note names from lilypond.words -file.
	small fix in the use of string-match.
