@@ -218,7 +218,7 @@ touch var/adm/SuSEconfig/run-texhash
 %doc lilypond-font-lock.el
 %doc lilypond-indent.el
 %doc lilypond-init.el
-%doc out/lilypond.words
+%doc out/lilypond.words.el
 
 %config /etc/profile.d/*
 
